change docs's title description
