# storage/api-docs/api-docs.json
@@ -1,10 +1,10 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "Sample API",
+        "title": "Langsungmakan API",
         "contact": {
-            "name": "Henry",
-            "url": "https://www.google.com"
+            "name": "Our",
+            "url": "https://www.langsungmakan.com"
         },
         "version": "1.0"
     },
@@ -326,7 +326,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/User"
+                                "$ref": "#/definitions/user"
                             }
                         }
                     },
